--- a/src/main/resources/static/templates/cita.html
+++ b/src/main/resources/static/templates/cita.html
@@ -8,15 +8,15 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href="#"><b>NoInsane</b></a>
+	          <a class="navbar-brand" href="#home"><b>NoInsane</b></a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          
                 <ul class="nav nav-tabs">
-                    <li class="active"><a href="#home" class="smothscroll">Home</a></li>
+                    <li><a href="#home" class="smothscroll">Home</a></li>
   		            <li><a href="#desc" class="smothscroll">Descripci&oacuten</a></li>
-  		            <li><a href="#cita" class="smothScroll">Citas</a></li>
-                    <li><a href="#showcase" class="smothScroll">Centros médicos</a></li>
+  		            <li class="active"><a href="#cita" class="smothScroll">Citas</a></li>
+                    <li><a href="#showcase" class="smothScroll">Centros mï¿½dicos</a></li>
   		            <li><a href="#frec" class="smothScroll">Preguntas frecuentes</a></li>
                     <li><a href="#registro" class="smothScroll">Mi NoInsane</a></li>
   		
@@ -29,7 +29,7 @@
 	<div id="features">
 		<div class="container">
 			<div class="row">
-				<h1 class="centered">¿Quieres cita?</h1>
+				<h1 class="centered">ï¿½Quieres cita?</h1>
 				<br>
 				<br>
 				<div class="col-lg-6 centered">
@@ -49,9 +49,9 @@
 		                    </div><!-- /accordion-heading -->
 		                    <div id="collapseOne" class="accordion-body collapse in">
 		                        <div class="accordion-inner">
-								<p>Consulte las formas de obtener cita previa en Atención Primaria. 
-                                    Desde esta página puede pedir, consultar, cambiar o anular su cita con el médico de Familia,
-                                    Pediatra o profesional de Enfermería.</p>
+								<p>Consulte las formas de obtener cita previa en Atenciï¿½n Primaria. 
+                                    Desde esta pï¿½gina puede pedir, consultar, cambiar o anular su cita con el mï¿½dico de Familia,
+                                    Pediatra o profesional de Enfermerï¿½a.</p>
 								</div><!-- /accordion-inner -->
 		                    </div><!-- /collapse -->
 		                </div><!-- /accordion-group -->
@@ -65,10 +65,10 @@
 		                    </div>
 		                    <div id="collapseTwo" class="accordion-body collapse">
 		                        <div class="accordion-inner">
-								<p>Consulte las formas de obtener cita previa en Atención Especializada.
-                                    Desde esta página puede pedir, consultar, cambiar o anular su cita con el Especialista solicitada
-                                    por su médico de Atención Primaria, con la posibilidad de elegir otro centro sanitario 
-                                    y médico Especialista.</p>
+								<p>Consulte las formas de obtener cita previa en Atenciï¿½n Especializada.
+                                    Desde esta pï¿½gina puede pedir, consultar, cambiar o anular su cita con el Especialista solicitada
+                                    por su mï¿½dico de Atenciï¿½n Primaria, con la posibilidad de elegir otro centro sanitario 
+                                    y mï¿½dico Especialista.</p>
 								</div><!-- /accordion-inner -->
 		                    </div><!-- /collapse -->
 		                </div><!-- /accordion-group -->
