--- a/src/main/resources/static/templates/description.html
+++ b/src/main/resources/static/templates/description.html
@@ -8,18 +8,18 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href="#"><b>NoInsane</b></a>
+	          <a class="navbar-brand" href="#home"><b>NoInsane</b></a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          
                 <ul class="nav nav-tabs">
-                    <li class="active"><a href="#home" class="smothscroll">Home</a></li>
-  		            <li><a href="#desc" class="smothscroll">Descripci&oacuten</a></li>
+                    <li><a href="#home" class="smothscroll">Home</a></li>
+  		            <li class="active"><a href="#desc" class="smothscroll">Descripci&oacuten</a></li>
   		            <li><a href="#cita" class="smothScroll">Citas</a></li>
-                    <li><a href="#showcase" class="smothScroll">Centros médicos</a></li>
+                    <li><a href="#showcase" class="smothScroll">Centros mï¿½dicos</a></li>
   		            <li><a href="#frec" class="smothScroll">Preguntas frecuentes</a></li>
                     <li><a href="#contact" class="smothScroll">Contact</a></li>
-  		
+					<li><a href="#registro" class="smothScroll">Mi NoInsane</a></li>
 	        </div><!--/.nav-collapse -->
 	      </div>
 	    </div>
