--- a/src/main/resources/static/templates/frecuentes.html
+++ b/src/main/resources/static/templates/frecuentes.html
@@ -8,16 +8,16 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href="#"><b>NoInsane</b></a>
+	          <a class="navbar-brand" href="#home"><b>NoInsane</b></a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          
                 <ul class="nav nav-tabs">
-                    <li class="active"><a href="#home" class="smothscroll">Home</a></li>
+                    <li><a href="#home" class="smothscroll">Home</a></li>
   		            <li><a href="#desc" class="smothscroll">Descripci&oacuten</a></li>
   		            <li><a href="#cita" class="smothScroll">Citas</a></li>
-                    <li><a href="#showcase" class="smothScroll">Centros médicos</a></li>
-  		            <li><a href="#frec" class="smothScroll">Preguntas frecuentes</a></li>
+                    <li><a href="#showcase" class="smothScroll">Centros mï¿½dicos</a></li>
+  		            <li class="active"><a href="#frec" class="smothScroll">Preguntas frecuentes</a></li>
                     <li><a href="#registro" class="smothScroll">Mi NoInsane</a></li>
   		
 	        </div><!--/.nav-collapse -->
@@ -41,13 +41,13 @@
 		                <div class="accordion-group">
 		                    <div class="accordion-heading">
 		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		                        ¿Puedo modificar una cita ya confirmada para cambiar la fecha de consulta?
+		                        ï¿½Puedo modificar una cita ya confirmada para cambiar la fecha de consulta?
 		                        </a>
 		                    </div><!-- /accordion-heading -->
 		                 
 		                        <div class="accordion-inner">
-								<p>SÍ. Desde este servicio web también se puede cambiar 
-		una cita  a través de la opción de 'Cambiar cita'.</p>
+								<p>Sï¿½. Desde este servicio web tambiï¿½n se puede cambiar 
+		una cita  a travï¿½s de la opciï¿½n de 'Cambiar cita'.</p>
 								</div><!-- /accordion-inner -->
 		                   
 		                </div><!-- /accordion-group -->
@@ -56,13 +56,13 @@
 		                <div class="accordion-group">
 		                    <div class="accordion-heading">
 		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		                        ¿Cómo puedo anular una cita?
+		                        ï¿½Cï¿½mo puedo anular una cita?
 		                        </a>
 		                    </div>
 		                  
 		                        <div class="accordion-inner">
-								<p>Se puede anular desde la opción 'Cambiar o Anular',
-		  o bien a través de la llamada al teléfono de contacto del centro de salud.</p>
+								<p>Se puede anular desde la opciï¿½n 'Cambiar o Anular',
+		  o bien a travï¿½s de la llamada al telï¿½fono de contacto del centro de salud.</p>
 								</div><!-- /accordion-inner -->
 		                    
 		                </div><!-- /accordion-group -->
