--- a/src/main/resources/static/templates/perfil.html
+++ b/src/main/resources/static/templates/perfil.html
@@ -8,7 +8,7 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href="#"><b>NoInsane</b></a>
+	          <a class="navbar-brand" href="#home"><b>NoInsane</b></a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          
@@ -28,8 +28,8 @@
 					<label for="DNIregistro">DNI</label> </br>
 					<input type="text" size="50"  id="DNIregistro"placeholder="Introduce tu DNI..." required> </div> 
 					<div class="form-group"> 
-						<label for="contra">Contraseña</label> </br>
-					<input type="password" size="50"  id="contra" placeholder="Introduce una contraseña secreta..." required>
+						<label for="contra">Contraseï¿½a</label> </br>
+					<input type="password" size="50"  id="contra" placeholder="Introduce una contraseï¿½a secreta..." required>
 			  		</div> 
 			  		<div class="form-group">
 			  			<label for="email">Correo</label> </br>
@@ -40,7 +40,7 @@
 					<input type="text" size="50"  id="DNIregistro"placeholder="Introduce tu DNI..." required> </div> 
 					<div class="form-group"> 
 						<label for="contra">Nombre</label> </br>
-					<input type="password" size="50"  id="contra" placeholder="Introduce una contraseña secreta..." required>
+					<input type="password" size="50"  id="contra" placeholder="Introduce una contraseï¿½a secreta..." required>
 			  		</div> 
 			  		<div class="form-group"> 
 			  			<label for="email">Apellidos</label> </br>
