--- a/src/main/resources/static/templates/principal.html
+++ b/src/main/resources/static/templates/principal.html
@@ -8,7 +8,7 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href="#"><b>NoInsane</b></a>
+	          <a class="navbar-brand" href="#home"><b>NoInsane</b></a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          
@@ -89,7 +89,7 @@
 	<div id="features">
 		<div class="container">
 			<div class="row">
-				<h1 class="centered">¿Quieres cita?</h1>
+				<h1 class="centered">ï¿½Quieres cita?</h1>
 				<br>
 				<br>
 				<div class="col-lg-6 centered">
@@ -126,10 +126,10 @@
 		                    </div>
 		                    <div id="collapseTwo" class="accordion-body collapse">
 		                        <div class="accordion-inner">
-								<p>Consulte las formas de obtener cita previa en Atención Especializada.
-                                    Desde esta página puede pedir, consultar, cambiar o anular su cita con el Especialista solicitada
+								<p>Consulte las formas de obtener cita previa en Atenciï¿½n Especializada.
+                                    Desde esta pï¿½gina puede pedir, consultar, cambiar o anular su cita con el Especialista solicitada
                                     por su m&eacutedico de Atenci&oacuten Primaria, con la posibilidad de elegir otro centro sanitario 
-                                    y médico Especialista.</p>
+                                    y mï¿½dico Especialista.</p>
 								</div><!-- /accordion-inner -->
 		                    </div><!-- /collapse -->
 		                </div><!-- /accordion-group -->
@@ -198,7 +198,7 @@
 		                <div class="accordion-group">
 		                    <div class="accordion-heading">
 		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		                        ¿Puedo modificar una cita ya confirmada para cambiar la fecha de consulta?
+		                        ï¿½Puedo modificar una cita ya confirmada para cambiar la fecha de consulta?
 		                        </a>
 		                    </div><!-- /accordion-heading -->
 		                 
@@ -213,13 +213,13 @@
 		                <div class="accordion-group">
 		                    <div class="accordion-heading">
 		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		                        ¿C&oacutemo puedo anular una cita?
+		                        ï¿½C&oacutemo puedo anular una cita?
 		                        </a>
 		                    </div>
 		                  
 		                        <div class="accordion-inner">
 								<p>Se puede anular desde la opci&oacuten 'Cambiar o Anular',
-		  o bien a trav&eacutes de la llamada al teléfono de contacto del centro de salud.</p>
+		  o bien a trav&eacutes de la llamada al telï¿½fono de contacto del centro de salud.</p>
 								</div><!-- /accordion-inner -->
 		                    
 		                </div><!-- /accordion-group -->
@@ -239,7 +239,7 @@
 	<div id="footerwrap">
 		<div class="container">
 			<div class="col-lg-5">
-				<h3>¿A&uacuten no te has registrado en NoInsane?</h3>
+				<h3>ï¿½A&uacuten no te has registrado en NoInsane?</h3>
 				<p>
 				Si eres cliente de NoInsane entra y<br/>
 				disfruta de nuestras ventajas<br/>
@@ -258,8 +258,8 @@
 					<label for="DNIregistro">DNI</label> 
 					<input type="text" class="form-control" id="DNIregistro"placeholder="Introduce tu DNI..." required> </div> 
 					<div class="form-group"> 
-						<label for="contra">Contraseña</label> 
-					<input type="password" class="form-control" id="contra" placeholder="Introduce una contraseña secreta..." required>
+						<label for="contra">Contraseï¿½a</label> 
+					<input type="password" class="form-control" id="contra" placeholder="Introduce una contraseï¿½a secreta..." required>
 			  		</div> 
 			  		<div class="form-group"> 
 			  			<label for="email">Correo</label> 
