--- a/src/main/resources/static/templates/showcase.html
+++ b/src/main/resources/static/templates/showcase.html
@@ -13,12 +13,13 @@
 	        <div class="navbar-collapse collapse">
 	          
                 <ul class="nav nav-tabs">
-                    <li class="active"><a href="#home" class="smothscroll">Home</a></li>
+                    <li><a href="#home" class="smothscroll">Home</a></li>
   		            <li><a href="#desc" class="smothscroll">Descripci&oacuten</a></li>
   		            <li><a href="#cita" class="smothScroll">Citas</a></li>
-                    <li><a href="#showcase" class="smothScroll">Centros médicos</a></li>
+                    <li class="active"><a href="#showcase" class="smothScroll">Centros mï¿½dicos</a></li>
   		            <li><a href="#frec" class="smothScroll">Preguntas frecuentes</a></li>
                     <li><a href="#registro" class="smothScroll">Mi NoInsane</a></li>
+                    
   		
 	        </div><!--/.nav-collapse -->
 	      </div>
@@ -30,7 +31,7 @@
 	<div id="showcase">
 		<div class="container">
 			<div class="row">
-				<h1 class="centered">Centros médicos</h1>
+				<h1 class="centered">Centros mï¿½dicos</h1>
 				<br>
 				<div class="col-lg-8 col-lg-offset-2">
 					<div id="carousel-example-generic" class="carousel slide">
